#2563 related fix - default link should not wrap
svn changeset:6844/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/link/link.css
+++ b/WebContent/ITMILL/themes/default/link/link.css
@@ -2,6 +2,10 @@
  * Link component styles 
  * (useless to move into a separate file)
  */
+.i-link {
+	white-space: nowrap;	
+}
+
 .i-link a {
 	color: #464f52;
 	vertical-align: middle;
